--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,8 @@
   "routes": [
     { "src": "/static/(.*)", "dest": "/static/$1" },
     { "src": "/(.*)", "dest": "app.py" }
-  ]
+  ],
+  "functions": {
+    "app.py": { "runtime": "python3.12" }
+  }
 }
